--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux
+
+.env.*
+.env
+!.env.example
