Add more API info in README
- Enforce "I" prefix for interface names
- Refactoring

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -124,6 +124,15 @@
           }
         ]
       }
+    ],
+
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "prefix": ["I"],
+        "format": ["StrictPascalCase"]
+      }
     ]
   }
 }
