Update ESLint rule

--- a/react-typescript/.eslintrc.json
+++ b/react-typescript/.eslintrc.json
@@ -148,6 +148,11 @@
       {
         "selector": "variable",
         "format": ["strictCamelCase"]
+      },
+      {
+        "selector": "variable",
+        "format": ["StrictPascalCase"],
+        "modifiers": ["exported"]
       }
     ]
   }
