Fix argument error, update README in Next template

--- a/next-pwa/.eslintrc.json
+++ b/next-pwa/.eslintrc.json
@@ -1,6 +1,5 @@
 {
   "extends": [
-    "next",
     "airbnb",
     "airbnb-typescript",
     "airbnb/hooks",
@@ -121,6 +120,11 @@
             "pattern": "{.,..}/**/*.scss",
             "group": "sibling",
             "position": "after"
+          },
+          {
+            "pattern": "{.,..}/**/*.css",
+            "group": "sibling",
+            "position": "after"
           }
         ]
       }
@@ -144,6 +148,11 @@
       {
         "selector": "variable",
         "format": ["strictCamelCase"]
+      },
+      {
+        "selector": "variable",
+        "format": ["StrictPascalCase"],
+        "modifiers": ["exported"]
       }
     ]
   }
