--- a/react-typescript/Dockerfile
+++ b/react-typescript/Dockerfile
@@ -1,5 +1,5 @@
 ### STAGE 1: Build ###
-FROM node:16.14.2 as ui-pwa-build
+FROM node:16.14.2 as builder
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY ./package.json /app/
@@ -13,8 +13,8 @@ RUN DISABLE_ESLINT_PLUGIN=true GENERATE_SOURCEMAP=false yarn build
 
 ### STAGE 2: Production Environment ###
 FROM nginxinc/nginx-unprivileged:1.20
-COPY --from=ui-pwa-build /app/build /usr/share/nginx/html
-COPY --from=ui-pwa-build /app/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
