--- a/react-typescript/package.json
+++ b/react-typescript/package.json
@@ -39,6 +39,9 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -54,6 +57,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-refresh": "^0.11.0",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
