--- a/next-pwa/Dockerfile
+++ b/next-pwa/Dockerfile
@@ -22,6 +22,10 @@ COPY . .
 # Uncomment the following line in case you want to disable telemetry during the build.
 ENV NEXT_TELEMETRY_DISABLED 1
 
+# Uncomment to enable JS obfuscation. Disabled by default because it drastically reduces performance and increases bundle size. Enable
+# only if required for the project.
+# ENV USE_JS_OBFUSCATION 1
+
 RUN yarn build
 
 # Production image, copy all the files and run next
@@ -29,8 +33,7 @@ FROM node:16-alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -42,7 +45,6 @@ COPY --from=builder /app/next-i18next.config.js ./next-i18next.config.js
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-# TODO: Check why this folder doesn't exist when it is supposed to exist in next > 12
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
