--- a/next-pwa/package.json
+++ b/next-pwa/package.json
@@ -30,7 +30,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.6.3",
     "eslint-webpack-plugin": "^3.2.0",
+    "javascript-obfuscator": "^4.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "webpack-obfuscator": "^3.5.1"
   }
 }
