Updat ESLint for type naming conventions

--- a/next-pwa/.eslintrc.json
+++ b/next-pwa/.eslintrc.json
@@ -138,6 +138,10 @@
         "format": ["StrictPascalCase"]
       },
       {
+        "selector": "typeAlias",
+        "format": ["StrictPascalCase"]
+      },
+      {
         "selector": "enum",
         "format": ["StrictPascalCase"]
       },
