--- a/react-library/.eslintrc.json
+++ b/react-library/.eslintrc.json
@@ -138,6 +138,10 @@
         "format": ["StrictPascalCase"]
       },
       {
+        "selector": "typeAlias",
+        "format": ["StrictPascalCase"]
+      },
+      {
         "selector": "enum",
         "format": ["StrictPascalCase"]
       },
